--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -333,19 +333,11 @@ import { Title } from "../../components";
   
 </section> -->
 
-<!--
-  Heads up! 👋
-
-  This component comes with some `rtl` classes. Please remove them if they are not needed in your project.
--->
-
-<section class="bg-gray-50">
+<section class="bg-[#0aabd7]">
   <div class="mx-auto max-w-[1340px] px-4 py-12 sm:px-6 lg:me-0 lg:py-16 lg:pe-0 lg:ps-8 xl:py-24">
     <div class="grid grid-cols-1 gap-8 lg:items-center lg:gap-16">
       <div class="text-center">
-        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-          Lo que dicen nuestros clientes
-        </h2>
+        <Title>Lo que dicen nuestros clientes</Title>
 
         <div class="hidden lg:mt-8 lg:gap-4">
           <button
@@ -457,7 +449,7 @@ import { Title } from "../../components";
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-rose-600 sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
                     No, Rose, they are not breathing. And they have no arms or legs … Where are
@@ -536,7 +528,7 @@ import { Title } from "../../components";
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-rose-600 sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
                     No, Rose, they are not breathing. And they have no arms or legs … Where are
@@ -615,7 +607,7 @@ import { Title } from "../../components";
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-rose-600 sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
                     No, Rose, they are not breathing. And they have no arms or legs … Where are
@@ -634,11 +626,11 @@ import { Title } from "../../components";
       </div>
     </div>
 
-    <div class="mt-8 flex justify-center gap-4 lg:hidden">
+    <div class="mt-8 flex justify-center gap-4">
       <button
         aria-label="Previous slide"
         id="keen-slider-previous"
-        class="rounded-full border border-rose-600 p-4 text-rose-600 transition hover:bg-rose-600 hover:text-white"
+        class="rounded-full border border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-rose-600 hover:text-white"
       >
         <svg
           class="h-5 w-5 -rotate-180 transform"
@@ -654,7 +646,7 @@ import { Title } from "../../components";
       <button
         aria-label="Next slide"
         id="keen-slider-next"
-        class="rounded-full border border-rose-600 p-4 text-rose-600 transition hover:bg-rose-600 hover:text-white"
+        class="rounded-full border border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-rose-600 hover:text-white"
       >
         <svg
           class="h-5 w-5"
