--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -333,8 +333,10 @@ import { Title } from "../../components";
   
 </section> -->
 
-<section class="bg-[#0aabd7]">
-  <div class="mx-auto max-w-[1340px] px-4 py-12 sm:px-6 lg:me-0 lg:py-16 lg:pe-0 lg:ps-8 xl:py-24">
+<section class="testimonials bg-[#0aabd7]">
+  <div
+    class="mx-auto max-w-[1340px] px-4 py-12 sm:px-6 lg:me-0 lg:py-16 lg:pe-0 lg:ps-8 xl:py-24"
+  >
     <div class="grid grid-cols-1 gap-8 lg:items-center lg:gap-16">
       <div class="text-center">
         <Title>Lo que dicen nuestros clientes</Title>
@@ -356,8 +358,7 @@ import { Title } from "../../components";
               <path
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M15.75 19.5L8.25 12l7.5-7.5"
-              />
+                d="M15.75 19.5L8.25 12l7.5-7.5"></path>
             </svg>
           </button>
 
@@ -377,8 +378,7 @@ import { Title } from "../../components";
                 d="M9 5l7 7-7 7"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                stroke-width="2"
-              />
+                stroke-width="2"></path>
             </svg>
           </button>
         </div>
@@ -400,7 +400,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -411,7 +411,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -422,7 +422,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -433,7 +433,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -444,17 +444,20 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">
+                    Stayin' Alive
+                  </p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
-                    No, Rose, they are not breathing. And they have no arms or legs … Where are
-                    they? You know what? If we come across somebody with no arms or legs, do we
-                    bother resuscitating them? I mean, what quality of life do we have there?
+                    No, Rose, they are not breathing. And they have no arms or
+                    legs … Where are they? You know what? If we come across
+                    somebody with no arms or legs, do we bother resuscitating
+                    them? I mean, what quality of life do we have there?
                   </p>
                 </div>
               </div>
@@ -479,7 +482,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -490,7 +493,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -501,7 +504,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -512,7 +515,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -523,17 +526,20 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">
+                    Stayin' Alive
+                  </p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
-                    No, Rose, they are not breathing. And they have no arms or legs … Where are
-                    they? You know what? If we come across somebody with no arms or legs, do we
-                    bother resuscitating them? I mean, what quality of life do we have there?
+                    No, Rose, they are not breathing. And they have no arms or
+                    legs … Where are they? You know what? If we come across
+                    somebody with no arms or legs, do we bother resuscitating
+                    them? I mean, what quality of life do we have there?
                   </p>
                 </div>
               </div>
@@ -558,7 +564,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -569,7 +575,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -580,7 +586,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -591,7 +597,7 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
 
                   <svg
@@ -602,17 +608,20 @@ import { Title } from "../../components";
                   >
                     <path
                       d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-                    />
+                    ></path>
                   </svg>
                 </div>
 
                 <div class="mt-4">
-                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">Stayin' Alive</p>
+                  <p class="text-2xl font-bold text-[#3b4289] sm:text-3xl">
+                    Stayin' Alive
+                  </p>
 
                   <p class="mt-4 leading-relaxed text-gray-700">
-                    No, Rose, they are not breathing. And they have no arms or legs … Where are
-                    they? You know what? If we come across somebody with no arms or legs, do we
-                    bother resuscitating them? I mean, what quality of life do we have there?
+                    No, Rose, they are not breathing. And they have no arms or
+                    legs … Where are they? You know what? If we come across
+                    somebody with no arms or legs, do we bother resuscitating
+                    them? I mean, what quality of life do we have there?
                   </p>
                 </div>
               </div>
@@ -630,7 +639,7 @@ import { Title } from "../../components";
       <button
         aria-label="Previous slide"
         id="keen-slider-previous"
-        class="rounded-full border border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-rose-600 hover:text-white"
+        class="rounded-full border-4 border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-[#5f69d4] hover:text-white"
       >
         <svg
           class="h-5 w-5 -rotate-180 transform"
@@ -639,14 +648,18 @@ import { Title } from "../../components";
           viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg"
         >
-          <path d="M9 5l7 7-7 7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+          <path
+            d="M9 5l7 7-7 7"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="4"></path>
         </svg>
       </button>
 
       <button
         aria-label="Next slide"
         id="keen-slider-next"
-        class="rounded-full border border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-rose-600 hover:text-white"
+        class="rounded-full border-4 border-[#3b4289] p-4 text-[#3b4289] transition hover:bg-[#5f69d4] hover:text-white"
       >
         <svg
           class="h-5 w-5"
@@ -655,7 +668,11 @@ import { Title } from "../../components";
           viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg"
         >
-          <path d="M9 5l7 7-7 7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+          <path
+            d="M9 5l7 7-7 7"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="4"></path>
         </svg>
       </button>
     </div>
@@ -663,21 +680,21 @@ import { Title } from "../../components";
 </section>
 
 <script type="module">
-  import KeenSlider from 'https://cdn.jsdelivr.net/npm/keen-slider@6.8.6/+esm'
+  import KeenSlider from "https://cdn.jsdelivr.net/npm/keen-slider@6.8.6/+esm";
 
   const keenSlider = new KeenSlider(
-    '#keen-slider',
+    "#keen-slider",
     {
       loop: true,
       slides: {
-        origin: 'center',
+        origin: "center",
         perView: 1.25,
         spacing: 16,
       },
       breakpoints: {
-        '(min-width: 1024px)': {
+        "(min-width: 1024px)": {
           slides: {
-            origin: 'auto',
+            origin: "auto",
             perView: 1.5,
             spacing: 32,
           },
@@ -685,17 +702,21 @@ import { Title } from "../../components";
       },
     },
     []
-  )
+  );
 
-  const keenSliderPrevious = document.getElementById('keen-slider-previous')
-  const keenSliderNext = document.getElementById('keen-slider-next')
+  const keenSliderPrevious = document.getElementById("keen-slider-previous");
+  const keenSliderNext = document.getElementById("keen-slider-next");
 
-  const keenSliderPreviousDesktop = document.getElementById('keen-slider-previous-desktop')
-  const keenSliderNextDesktop = document.getElementById('keen-slider-next-desktop')
+  const keenSliderPreviousDesktop = document.getElementById(
+    "keen-slider-previous-desktop"
+  );
+  const keenSliderNextDesktop = document.getElementById(
+    "keen-slider-next-desktop"
+  );
 
-  keenSliderPrevious.addEventListener('click', () => keenSlider.prev())
-  keenSliderNext.addEventListener('click', () => keenSlider.next())
+  keenSliderPrevious.addEventListener("click", () => keenSlider.prev());
+  keenSliderNext.addEventListener("click", () => keenSlider.next());
 
-  keenSliderPreviousDesktop.addEventListener('click', () => keenSlider.prev())
-  keenSliderNextDesktop.addEventListener('click', () => keenSlider.next())
+  keenSliderPreviousDesktop.addEventListener("click", () => keenSlider.prev());
+  keenSliderNextDesktop.addEventListener("click", () => keenSlider.next());
 </script>
