--- a/src/components/home/NavBar.astro
+++ b/src/components/home/NavBar.astro
@@ -8,7 +8,7 @@
       <a class="w-full block" href="/">Inicio</a>
     </li>
     <li class="transition duration-100 relative group text-center w-36">
-      <span class="w-full block cursor-pointer">Servicios</span>
+      <a href="/services" class="w-full block cursor-pointer">Servicios</a>
       <ul
         class="transition absolute hidden -bottom-[19rem] group-hover:flex group-active:flex flex-col gap-2 p-2 rounded-md w-full bg-white z-50"
       >
