--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -3,9 +3,11 @@ interface Props {
   link?: string;
   increaseStyle?: string;
   bgColor?: string;
+  typeButton?: string;
 }
 
 const { link, increaseStyle, bgColor = "bg-[#0aabd7]" } = Astro.props;
+
 ---
 
 <a
