--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -4,7 +4,7 @@ import { Button, HeaderSection, Title } from "../../components";
 ---
 
 <BaseLayout title="Contáctanos">
-  <main class="py-10 lg:flex lg:px-24">
+  <section class="py-10 lg:flex lg:px-24">
     <section class="mb-10 lg:mb-0 lg:py-16 text-black">
       <Title>Servitec - Perú</Title>
       <div class="px-6">
@@ -84,12 +84,5 @@ import { Button, HeaderSection, Title } from "../../components";
         </form>
       </div>
     </section>
-  </main>
+  </section>
 </BaseLayout>
-
-<style>
-  .header-contact {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("/header-contact.jpg");
-  }
-</style>
