--- a/src/components/home/BookYourAppointment.astro
+++ b/src/components/home/BookYourAppointment.astro
@@ -2,58 +2,64 @@
 import { Title } from "..";
 ---
 
-<section class="flex flex-col px-6 py-32 lg:py-40 lg:flex-row cita">
+<section class="flex flex-col px-6 py-28 lg:py-40 lg:flex-row cita">
   <figure class="flex-1 flex justify-center lg:m-0">
     <img src="/images/tecnico.png" alt="" class="w-full md:w-96 object-cover" />
   </figure>
   <div class="flex-1 pt-5">
-    <Title color="text-[#0aabd7]">Reserva tu Cita</Title>
+    <Title>Reserva tu Cita</Title>
     <form class="">
       <div class="mb-5">
-        <label for="name" class="block mb-2 text-sm font-medium text-[#010002]"
-          >Nombre</label
+        <label for="name" class="block mb-2 font-medium text-[#010002]"
+          >Nombres</label
         >
         <input
           type="text"
           id="name"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
           required
         />
       </div>
       <div class="mb-5">
-        <label
-          for="cellphone"
-          class="block mb-2 text-sm font-medium text-[#010002]"
+        <label for="email" class="block mb-2 font-medium text-[#010002]"
+          >Correo</label
+        >
+        <input
+          type="email"
+          id="email"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
+          required
+        />
+      </div>
+      <div class="mb-5">
+        <label for="cellphone" class="block mb-2 font-medium text-[#010002]"
           >Número De Teléfono</label
         >
         <input
           type="text"
           id="cellphone"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
           required
         />
       </div>
       <div class="mb-5">
-        <label
-          for="address"
-          class="block mb-2 text-sm font-medium text-[#010002]">Dirección</label
+        <label for="address" class="block mb-2 font-medium text-[#010002]"
+          >Dirección</label
         >
         <input
           type="text"
           id="address"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
           required
         />
       </div>
       <div class="mb-5">
-        <label
-          for="countries"
-          class="block mb-2 text-sm font-medium text-[#010002]"
-          >Select your country</label
+        <label for="service" class="block mb-2 font-medium text-[#010002]"
+          >Tipo de Servicio</label
         >
         <select
-          id="countries"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          id="service"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
         >
           <option>United States</option>
           <option>Canada</option>
@@ -61,9 +67,19 @@ import { Title } from "..";
           <option>Germany</option>
         </select>
       </div>
+      <div class="sm:col-span-2 mb-5">
+        <label for="message" class="block mb-2 text-sm font-medium text-black"
+          >Consulta</label
+        >
+        <textarea
+          id="message"
+          rows="6"
+          class="block p-2.5 w-full text-sm text-black rounded-lg shadow-sm border border-primary-color-950 placeholder-gray-400"
+          placeholder="Ingrese su consulta"></textarea>
+      </div>
       <button
         type="submit"
-        class="text-white bg-[#0aabd7] hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        class="text-white bg-[#0aabd7] hover:bg-[#6adcf6] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >Solicite ahora</button
       >
     </form>
@@ -90,10 +106,24 @@ import { Title } from "..";
     top: 0;
     left: 0;
   }
-  
+
   .image-cita-top {
     position: absolute;
     bottom: 0;
     left: 0;
   }
 </style>
+
+<script>
+  const input = document.getElementById("cellphone");
+
+  input.addEventListener("input", function () {
+    let valorInput = input.value;
+
+    valorInput = valorInput.replace(/\D/g, "");
+
+    valorInput = valorInput.slice(0, 9);
+
+    input.value = valorInput;
+  });
+</script>
