--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -339,7 +339,7 @@ import { Title } from "../../components";
   >
     <div class="grid grid-cols-1 gap-8 lg:items-center lg:gap-16">
       <div class="text-center">
-        <Title>Lo que dicen nuestros clientes</Title>
+        <Title color="text-white">Lo que dicen nuestros clientes</Title>
 
         <div class="hidden lg:mt-8 lg:gap-4">
           <button
