--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,14 +17,13 @@ const { title } = Astro.props;
   <body>
     <div class="w-full max-w-full mx-auto overflow-hidden">
       <Header />
-      <div>
+      <main>
         <slot />
-      </div>
+      </main>
       <Footer />
     </div>
     <style is:global lang="scss">
       html {
-        font-family: system-ui, sans-serif;
         color-scheme: light;
       }
 
