--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -1,6 +1,6 @@
 ---
 import { BaseLayout } from "../../layouts";
-import { Button, HeaderSection, Title } from "../../components";
+import { AdvantagesCarousel, Button, HeaderSection, Title } from "../../components";
 ---
 
 <BaseLayout title="Contáctanos">
@@ -85,4 +85,5 @@ import { Button, HeaderSection, Title } from "../../components";
       </div>
     </section>
   </section>
+  <AdvantagesCarousel />
 </BaseLayout>
