--- a/src/components/AdvantagesCarousel.astro
+++ b/src/components/AdvantagesCarousel.astro
@@ -9,7 +9,7 @@ import { Title } from ".";
     class="absolute top-0 left-0"
   />
   <Title color="text-white">Por qué elegirnos</Title>
-  <div class="px-6 overflow-x-auto">
+  <div class="px-6 overflow-hidden">
     <div class="carrusel flex gap-4">
       <div class="min-w-72 bg-white p-4 pt-10">
         <p class="text-5xl w-max pb-6 border-b">🛠️</p>
