--- a/src/components/home/BannerBrands.astro
+++ b/src/components/home/BannerBrands.astro
@@ -54,68 +54,8 @@ const logos = [
 ];
 ---
 
-<!-- <section
-  class="flex flex-wrap gap-4 overflow-x-auto bg-primary-color-500 justify-evenly items-center p-6 md:p-0 md:py-6"
->
-  {
-    logos.map((logo) => {
-      return (
-        <figure class="w-24 flex flex-col justify-center">
-          <img src={`/logo-${logo}.webp`} alt={`Logo de la marca ${logo}`} />
-        </figure>
-      );
-    })
-  }
-</section> --><!-- <div class="carrusel">
-  <div
-    class="carousel carousel-center p-4 space-x-4 bg-neutral rounded-box"
-  >
-    {
-      logos.map((logo) => {
-        return (
-          <figure class="w-24 flex justify-center carousel-item">
-            <img src={`/logo-${logo}.webp`} alt={`Logo de la marca ${logo}`} />
-          </figure>
-        );
-      })
-    }
-  </div>
-</div> --><!-- <div class="w-full overflow-hidden slider bg-red-500">
-  <div class="slide-track">
-    {
-      logos.map((logo) => {
-        return (
-          <figure class="w-24 flex justify-center slide bg-green-500 p-2">
-            <img src={`/logo-${logo}.webp`} alt={`Logo de la marca ${logo}`} class="object-contain" />
-          </figure>
-        );
-      })
-    }
-  </div>
-</div>
-
-<style>
-  .slider .slide-track{
-    display: flex;
-    animation: scroll 40s linear infinite;
-    -webkit-animation: scroll 40s linear infinite;
-    width: calc(96px * 14);
-  }
-
-  @keyframes scroll{
-    0%{
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-    100%{
-      -webkit-transform: translateX(calc(-100%));
-      transform: translateX(calc(-100%));
-    }
-  }
-
-</style> -->
-<div class="logos">
-  <div class="logos-slide flex py-6 gap-6">
+<div class="group overflow-hidden bg-white whitespace-nowrap relative">
+  <div class="group-hover:animation-play-state-[paused] logos-slide flex py-6 gap-6">
     {
       logos.map((logo) => {
         return (
@@ -139,38 +79,6 @@ const logos = [
       transform: translateX(-100%);
     }
   }
-
-  .logos {
-    overflow: hidden;
-    background: white;
-    white-space: nowrap;
-    position: relative;
-  }
-
-  /* .logos:before,
-  .logos:after {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    height: 100%;
-    content: "";
-    z-index: 2;
-  }
-
-  .logos:before {
-    left: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-  }
-
-  .logos:after {
-    right: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-  } */
-
-  .logos:hover .logos-slide {
-    animation-play-state: paused;
-  }
-
   .logos-slide {
     animation: 35s slide infinite linear;
   }
