--- a/src/components/home/BookYourAppointment.astro
+++ b/src/components/home/BookYourAppointment.astro
@@ -2,11 +2,11 @@
 import { Title } from "..";
 ---
 
-<section class="flex flex-col px-6 py-28 lg:py-40 lg:flex-row cita">
-  <figure class="flex-1 flex justify-center lg:m-0">
-    <img src="/images/tecnico.png" alt="" class="w-full md:w-96 object-cover" />
+<section class="flex flex-col gap-6 px-6 py-28 lg:py-40 lg:flex-row cita">
+  <figure class="flex-1 flex justify-center">
+    <img src="/images/tecnico.png" alt="Foto de un técnico" class="w-full md:w-96 object-contain" />
   </figure>
-  <div class="flex-1 pt-5">
+  <div class="flex-1">
     <Title>Reserva tu Cita</Title>
     <form class="">
       <div class="mb-5">
@@ -16,7 +16,7 @@ import { Title } from "..";
         <input
           type="text"
           id="name"
-          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
+          class="text-[#010002] rounded-lg focus:border-[#0aabd7] block w-full p-2.5"
           required
         />
       </div>
@@ -27,7 +27,7 @@ import { Title } from "..";
         <input
           type="email"
           id="email"
-          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
+          class="text-[#010002] rounded-lg focus:border-[#0aabd7] block w-full p-2.5"
           required
         />
       </div>
@@ -38,18 +38,7 @@ import { Title } from "..";
         <input
           type="text"
           id="cellphone"
-          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
-          required
-        />
-      </div>
-      <div class="mb-5">
-        <label for="address" class="block mb-2 font-medium text-[#010002]"
-          >Dirección</label
-        >
-        <input
-          type="text"
-          id="address"
-          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
+          class="text-[#010002] rounded-lg focus:border-[#0aabd7] block w-full p-2.5"
           required
         />
       </div>
@@ -59,27 +48,33 @@ import { Title } from "..";
         >
         <select
           id="service"
-          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 outline outline-[#3b4289] block w-full p-2.5"
+          class="text-[#010002] rounded-lg focus:border-[#0aabd7] block w-full p-2.5"
         >
-          <option>United States</option>
-          <option>Canada</option>
-          <option>France</option>
-          <option>Germany</option>
+          <option value="">Reparación de Licuadoras</option>
+          <option value="">Reparación de Refrigeradores</option>
+          <option value="">Reparación de Lavadoras</option>
+          <option value="">Reparación de Visicooler</option>
+          <option value="">Reparación de Televisores</option>
+          <option value="">Reparación de Cocinas</option>
+          <option value="">Reparación de Aire Acondicionado</option>
+          <option value="">Reparación de Secadoras</option>
+          <option value="">Reparación de Termas Eléctricas</option>
+          <option value="">Reparación de Campana Extractora</option>
+          <option value="">Reparación de Cámaras de Seguridad</option>
         </select>
       </div>
       <div class="sm:col-span-2 mb-5">
-        <label for="message" class="block mb-2 text-sm font-medium text-black"
+        <label for="message" class="block mb-2 font-medium text-[#010002]"
           >Consulta</label
         >
         <textarea
           id="message"
           rows="6"
-          class="block p-2.5 w-full text-sm text-black rounded-lg shadow-sm border border-primary-color-950 placeholder-gray-400"
-          placeholder="Ingrese su consulta"></textarea>
+          class="block p-2.5 w-full text-[#010002] rounded-lg shadow-sm border focus:border-[#0aabd7]"></textarea>
       </div>
       <button
         type="submit"
-        class="text-white bg-[#0aabd7] hover:bg-[#6adcf6] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        class="text-white bg-[#0aabd7] hover:bg-[#6adcf6] focus:ring-4 focus-none focus:ring-blue-300 font-medium rounded-lg w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >Solicite ahora</button
       >
     </form>
