--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,11 @@
 ---
-import { ViewTransitions } from "astro:transitions";
-import Footer from "./Footer.astro";
-import Header from "./Header.astro";
-import BaseHead from "./BaseHead.astro";
+import { ViewTransitions } from 'astro:transitions';
+import Footer from './Footer.astro';
+import Header from './Header.astro';
+import BaseHead from './BaseHead.astro';
 
 interface Props {
-  title?: string;
+	title?: string;
 }
 
 const { title } = Astro.props;
@@ -13,37 +13,41 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="es">
-  <BaseHead title={title} description="Servitec - Reparación línea blanca" />
-  <body>
-    <div class="w-full max-w-full mx-auto overflow-hidden">
-      <Header />
-      <main>
-        <slot />
-      </main>
-      <Footer />
-    </div>
-    <style is:global lang="scss">
-      html {
-        color-scheme: light;
-      }
+	<BaseHead
+		title={title}
+		description="Servitec - Reparación línea blanca"
+		keywords=""
+	/>
+	<body>
+		<div class="mx-auto w-full max-w-full overflow-hidden">
+			<Header />
+			<main>
+				<slot />
+			</main>
+			<Footer />
+		</div>
+		<style is:global lang="scss">
+			html {
+				color-scheme: light;
+			}
 
-      .color {
-        &__primary {
-          color: #16a8d4;
-        }
-        &__secondary {
-          color: #004e90;
-        }
-        &__tertiary {
-          color: #032d57;
-        }
-        &__white {
-          color: #fff;
-        }
-        &__black {
-          color: #000;
-        }
-      }
-    </style>
-  </body>
+			.color {
+				&__primary {
+					color: #16a8d4;
+				}
+				&__secondary {
+					color: #004e90;
+				}
+				&__tertiary {
+					color: #032d57;
+				}
+				&__white {
+					color: #fff;
+				}
+				&__black {
+					color: #000;
+				}
+			}
+		</style>
+	</body>
 </html>
